# mulino

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  SESSION_SUMMARY.md  VERIFICATION.md  openapi.json
.claude/: settings.local.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/pizzeria/: __init__.py  seed_owner.py  seed_pizzas.py
backend/src/pizzeria/api/: deps.py  limiter.py  main.py  schemas.py
backend/src/pizzeria/api/routers/: auth.py  pizzas.py
backend/src/pizzeria/application/: errors.py
backend/src/pizzeria/application/ports/: owner_repository.py  pizza_repository.py
backend/src/pizzeria/domain/: allergen.py  money.py  owner.py  pizza.py
backend/src/pizzeria/infrastructure/: db.py  mappers.py  models.py  settings.py
backend/tests/: conftest.py
backend/tests/_contracts/: pizza_repository_contract.py
backend/tests/integration/: conftest.py  test_seed_owner.py  test_sql_owner_repository.py  test_sql_pizza_repository.py
backend/tests/integration/api/: conftest.py  test_auth.py  test_pizzas_admin.py  test_pizzas_public.py
backend/tests/unit/api/: test_schemas.py
backend/tests/unit/application/: fakes.py  test_authenticate_owner.py  test_create_pizza.py  test_delete_pizza.py  test_get_pizza.py  test_in_memory_pizza_repository.py  test_list_pizzas.py  test_update_pizza.py
backend/tests/unit/domain/: test_allergen.py  test_money.py  test_owner.py  test_pizza.py
backend/tests/unit/infrastructure/: test_jwt.py  test_passwords.py
docs/: ci.md  (+5 more)
(+57 files in other folders)
