[project]
name = "pizzeria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThisGweedo", email = "guido.s1998@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
pizzeria = "pizzeria:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
